--- a/1234.Rmd
+++ b/1234.Rmd
@@ -16,3 +16,8 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 123456
 
 ## Including Plots
+
+```{r}
+x = seq(1, 100)
+```
+
